--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -7,9 +7,10 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
     </head>
     <body>
         @content
+        <script src="@(routes.Assets.at("mithril/mithril.min.js"))"></script>
+        @playscalajs.html.scripts("/assets", projectName = "client")
     </body>
 </html>
